# instagram-server-django

./: .env  db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_feed_user.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_review_feed_review_user.py  0003_rename_caption_review_rcaption.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
